[gd_scene load_steps=9 format=3 uid="uid://fyhehcrlw1da"]

[ext_resource type="Script" path="res://scenes/ui/end_screen/end_screen.gd" id="1_yatw5"]
[ext_resource type="AudioStream" uid="uid://cvs6vkvpf2f0g" path="res://assets/audio/jingles_victory.ogg" id="2_5iux7"]
[ext_resource type="PackedScene" uid="uid://dhahl5xkqb8cl" path="res://scenes/components/sound_button/sound_button.tscn" id="2_os13x"]
[ext_resource type="AudioStream" uid="uid://cew70nj2xbttv" path="res://assets/audio/jingles_defeat.ogg" id="3_6sy88"]

[sub_resource type="Animation" id="Animation_7q4lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vlvog"]
resource_name = "in"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.607843, 0.298039, 0.639216, 1)]
}

[sub_resource type="Animation" id="Animation_ht6p0"]
resource_name = "out"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.607843, 0.298039, 0.639216, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yv8yp"]
_data = {
"RESET": SubResource("Animation_7q4lb"),
"in": SubResource("Animation_vlvog"),
"out": SubResource("Animation_ht6p0")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yatw5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yv8yp")
}
autoplay = "in"

[node name="VictoryStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5iux7")
volume_db = -5.0
bus = &"SFX"

[node name="DefeatStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6sy88")
volume_db = -5.0
bus = &"SFX"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.607843, 0.298039, 0.639216, 0.313726)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 24
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "You won!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueSoundButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_os13x")]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="QuitSoundButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_os13x")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu
"
